# otui-lsp

./: .coderabbit.yaml  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  ci.sh  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/lang-api/: Cargo.toml
crates/lang-api/src/: lib.rs
crates/otui-core/: Cargo.toml
crates/otui-core/examples/: corpus.rs
crates/otui-core/src/: alias_hover.rs  catalog.rs  colors.rs  completion.rs  diagnostics.rs  fixes.rs  folding.rs  format.rs  hierarchy.rs  hover.rs  id_hover.rs  ids.rs  indent.rs  inlay.rs  lenses.rs  lib.rs  links.rs  lua_refs.rs  lua_ui_loads.rs  lua_widgets.rs  manifest.rs  navigation.rs  otml_reparent.rs  otmod.rs  property_hover.rs  references.rs  schema.rs  semantic.rs  style_index.rs  symbols.rs  syntax.rs  widget_resolve.rs
crates/otui-lsp-server/: Cargo.toml
crates/otui-lsp-server/src/: cli.rs  convert.rs  lib.rs  main.rs  position.rs  semantic.rs
crates/otui-lsp-server/src/cli/: sarif.rs
crates/otui-lsp-server/tests/: cli_check.rs  cli_fmt.rs  loop_dispatch.rs
crates/tree-sitter-otui/: Cargo.toml  grammar.js  package.json  tree-sitter.json
crates/tree-sitter-otui/bindings/rust/: build.rs  lib.rs
crates/tree-sitter-otui/queries/: highlights.scm  injections.scm
crates/tree-sitter-otui/src/: grammar.json  node-types.json  parser.c  scanner.c
crates/tree-sitter-otui/test/corpus/: anchors.txt  block_scalars.txt  colors.txt  comments.txt  containers.txt  indentation.txt  inheritance.txt  lists.txt  literals.txt  lua.txt  properties.txt  states.txt
docs/: otui-language-service-spec.md  releasing.md
xtask/: Cargo.toml
xtask/src/: corpus.rs  main.rs
