[package]
name = "xtask"
description = "Development tasks for otui-lsp (e.g. generating the per-fork property/color catalog)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
regex = "1"
