[package]
name = "otui-lsp-server"
description = "Language Server (LSP 3.17) for OTUI/OTML, built on otui-core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "otui_lsp_server"
path = "src/lib.rs"

[[bin]]
name = "otui-lsp"
path = "src/main.rs"

[dependencies]
otui-core.workspace = true
lang-api.workspace = true
lsp-server = "0.8"
lsp-types = "=0.97.0"
crossbeam-channel = "0.5"
url = "2"
serde_json = "1"
